# hypha

./: .gitignore  .travis.yml  CMakeLists.txt  Jenkinsfile  PITCHME.header.tex  PITCHME.md  README.md  hypha-config.cmake
cmake/: 3rdParty.cmake  CompileOptions.cmake  HyphaConfig.cmake.in  HyphaConfigVersion.cmake.in  HyphaMacros.cmake
core/: CMakeLists.txt
core/cmake/: HyphaCoreConfig.cmake
core/include/hypha/: core.h
core/include/hypha/database/: database.h  userdatabase.h  userdbsql.h
core/include/hypha/database/ldap/: userdbldap.h
core/include/hypha/settings/: databasesettings.h  handlersettings.h  hyphasettings.h  pluginsettings.h  userdatabasesettings.h
core/src/database/: database.cpp  userdatabase.cpp  userdbsql.cpp
core/src/database/ldap/: userdbldap.cpp
core/src/settings/: databasesettings.cpp  handlersettings.cpp  hyphasettings.cpp  pluginsettings.cpp  userdatabasesettings.cpp
deploy/: CMakeLists.txt
doc/: CMakeLists.txt
docs/: CMakeLists.txt
docs/api-docs/: CMakeLists.txt  doxyfile.in
docs/manual/: CMakeLists.txt
handler/: CMakeLists.txt
handler/cmake/: HyphaHandlerConfig.cmake
handler/include/hypha/: handler.h
handler/include/hypha/handler/: handlerfactory.h  handlerloader.h  hyphahandler.h
handler/src/: handlerfactory.cpp  handlerloader.cpp
plugin/: CMakeLists.txt
plugin/cmake/: HyphaPluginConfig.cmake
plugin/include/hypha/: plugin.h
plugin/include/hypha/plugin/: hyphabaseplugin.h  hyphaplugin.h  pluginfactory.h  pluginloader.h
plugin/src/: pluginfactory.cpp  pluginloader.cpp
source/: CMakeLists.txt
source/controller/: CMakeLists.txt
source/controller/include/hypha/controller/: connection.h  handler.h  plugin.h
source/controller/source/: connection.cpp  handler.cpp  plugin.cpp
source/core/: CMakeLists.txt
source/core/include/hypha/core/cache/: cache.h
source/core/include/hypha/core/database/: database.h  databasegenerator.h  userdatabase.h  userdbsql.h
source/core/include/hypha/core/database/ldap/: userdbldap.h
source/core/include/hypha/core/exceptions/: configfilenotfound.h  hyphaexception.h
source/core/include/hypha/core/settings/: configgenerator.h  databasesettings.h  handlersettings.h  hyphasettings.h  pluginsettings.h  userdatabasesettings.h
source/core/source/cache/: cache.cpp
source/core/source/database/: database.cpp  databasegenerator.cpp  userdatabase.cpp  userdbsql.cpp
source/core/source/database/ldap/: userdbldap.cpp
source/core/source/settings/: configgenerator.cpp  databasesettings.cpp  handlersettings.cpp  hyphasettings.cpp  pluginsettings.cpp  userdatabasesettings.cpp
source/handler/: CMakeLists.txt
source/handler/include/hypha/handler/: handlerfactory.h  handlerloader.h  hyphahandler.h
source/handler/source/: handlerfactory.cpp  handlerloader.cpp
source/plugin/: CMakeLists.txt
source/plugin/include/hypha/plugin/: connection.h  hyphaactor.h  hyphabaseplugin.h  hyphahandler.h  hyphaplugin.h  hyphareceiver.h  hyphasender.h  hyphasensor.h  pluginfactory.h  pluginloader.h  pluginutil.h  receiverinterface.h  senderinterface.h
source/plugin/source/: pluginfactory.cpp  pluginloader.cpp  pluginutil.cpp
source/plugins/espeak/: CMakeLists.txt  README.md
source/plugins/espeak/include/hypha/plugins/espeak/: espeak.h
source/plugins/espeak/source/: espeak.cpp  espeak.css
source/plugins/helloworld/: CMakeLists.txt
source/plugins/helloworld/include/hypha/plugins/helloworld/: helloworld.h
source/plugins/helloworld/source/: helloworld.cpp
source/plugins/javascriptplugin/: CMakeLists.txt
source/plugins/javascriptplugin/include/hypha/plugins/javascriptplugin/: javascriptplugin.h
source/plugins/javascriptplugin/source/: javascriptplugin.cpp  javascriptplugin.js
source/plugins/pythonplugin/: CMakeLists.txt
source/plugins/pythonplugin/include/hypha/plugins/pythonplugin/: pythonplugin.h
source/plugins/pythonplugin/source/: pythonplugin.cpp  pythonplugin.py
source/tests/: CMakeLists.txt
source/tests/core-test/: CMakeLists.txt  cache_test.cpp  controller_test.cpp  core_test.cpp  database_test.cpp  plugins_test.cpp  settings_test.cpp
source/tests/hyphacore-test/: CMakeLists.txt
source/tests/plugin-test/: CMakeLists.txt  plugins_test.cpp
source/utils/: CMakeLists.txt
source/utils/include/hypha/utils/: email.h  logger.h  namesystem.h
source/utils/source/: email.cpp  logger.cpp  namesystem.cpp
utils/: CMakeLists.txt
utils/cmake/: HyphaUtilsConfig.cmake
utils/include/hypha/: utils.h
utils/include/hypha/utils/: email.h  logger.h
utils/src/: email.cpp  logger.cpp
