set(LIBNAME "Core")
set(HYPHA_LIBNAME "Hypha${LIBNAME}")

# Sources
file(GLOB_RECURSE SRCS_G "src/*.cpp")
HYPHA_SOURCES_AUTO( SRCS ${SRCS_G})
# Headers
file(GLOB_RECURSE HDRS_G "include/*.h" )
HYPHA_HEADERS_AUTO( SRCS ${HDRS_G})
HYPHA_SOURCES_AUTO_PLAT( SRCS WIN32 "")
add_library( "${LIBNAME}" ${LIB_MODE} ${SRCS})
add_library( "${HYPHA_LIBNAME}" ALIAS "${LIBNAME}")
set_target_properties( "${LIBNAME}"
PROPERTIES
VERSION ${SHARED_LIBRARY_VERSION} SOVERSION ${SHARED_LIBRARY_VERSION}
OUTPUT_NAME ${HYPHA_LIBNAME}
DEFINE_SYMBOL Core_EXPORTS
)
target_link_libraries("${LIBNAME}" HyphaUtils)
target_include_directories( "${LIBNAME}"
PUBLIC
$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
$<INSTALL_INTERFACE:include>
PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/src
)
HYPHA_INSTALL("${LIBNAME}")
HYPHA_GENERATE_PACKAGE("${LIBNAME}")
